resources/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-ai-demo
  labels:
    k8s-ai-demo: "true"
